--- a/style.css
+++ b/style.css
@@ -23,3 +23,22 @@ html {
     font-size: 62.5;
     font-family: 'DM Sans', sans-serif;
 }
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 16px;
+}
+header h1 {
+ text-align: center;
+ font-size: 24px;
+ font-weight: 700;
+ margin: 36px 0 24px 0;
+}
+header h2 {
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+}
