--- a/style.css
+++ b/style.css
@@ -20,25 +20,69 @@
     box-sizing: border-box;
 }
 html {
-    font-size: 62.5;
+    font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
+    --big: 2.4rem;
+    --medium: 1.6rem;
+    --little: 1.4rem;
 }
 header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 16px;
-}
-header h1 {
- text-align: center;
- font-size: 24px;
- font-weight: 700;
- margin: 36px 0 24px 0;
-}
-header h2 {
-    font-size: 14px;
-    font-weight: 500;
     text-align: center;
+    width: 100%;
+    height: 295px;
+    padding-top: 16px;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
+    min-width: 320px;
+}
+header .logo {
+    margin-top: 42px;
+    margin-bottom: 16px;
+}
+.header--title-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 229px;
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    margin-top: 0px;
+}
+.header--title-container h1 {
+ font-size: var(--big);
+ font-weight: 700;
+ margin: 36px 0 0px 0;
+ color: var(--just-white);
+}
+.header--title-container p {
+    font-size: var(--little);
+    font-weight: 500;
+    margin: 24px 16px 0px 16px;
+    color: var(--soft-orange);
+}
+.header--title-container a {
+    position: relative;
+    top: -5%;
+    text-decoration: none;
+    font-size: var(--little);
+    font-weight: 700;
+    margin-top: 32px;
+    color: var(--black);
+    height: 48px;
+    padding: 15px 0 15px 16px;
+    background-color: var(--off-white);
+    border-radius: 4px;
+    gap: 8px;
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+}
+.header--title-container span {
+    width: 12px;
+    height: 7.41px;
+    margin-right: 20px;
+    margin-left: 14px;
 }
