Commissions table finishing

--- a/style.css
+++ b/style.css
@@ -164,16 +164,16 @@ table .table__left {
     color: #B5B0AC;
     font-weight: 500;
 }
-.currency-table-container .table__top-left {
+.table__top-left {
     border-radius: 8px 0 0 0;
 }
-.currency-table-container .table__top-right {
+.table__top-right {
     border-radius: 0 8px 0 0;
 }
-.currency-table-container .table__bottom-left {
+.table__bottom-left {
     border-radius: 0 0 0 8px;
 }
-.currency-table-container .table__bottom-right {
+.table__bottom-right {
     border-radius: 0 0 8px 0;
 }
 
@@ -181,6 +181,38 @@ table .table__left {
     height: 31px;
     border-radius: 8px;
     background-color: var(--soft-orange);
+    margin-top: 16px;
+    margin-left: 10px;
+    padding: 8px;
+    color: var(--black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--medium);
+}
+.commissions-table-container {
+    display: flex;
+    flex-direction: column;
+    min-width: 235px;
+    max-width: 500px;
+    font-family: "Inter", sans-serif;
+}
+.commissions-table-container td {
+    background-color: var(--just-white);
+    padding: 11px 12px 10px 12px;
+    font-size: var(--medium);
+}
+.commissions-table-container span {
+    color: #1a9af7;
+    margin-left: 20px;
+    margin-bottom: 0;
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+.commissions-table-update .commissions-update {
+    height: 31px;
+    border-radius: 8px;
+    background-color: var(--soft-blue);
     margin-top: 16px;
     margin-left: 10px;
     padding: 8px;
