--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ html {
     --medium: 1.6rem;
     --little: 1.4rem;
 }
+.inactive {
+    display: none;
+}
 header {
     display: flex;
     flex-direction: column;
@@ -130,26 +133,29 @@ header .logo {
     width: 100%;
     min-width: 320px;
 }
-.main-tables-container span {
+.currency-table-container span {
     font-size: 1.8rem;
     font-weight: 700;
     color: var(--bitcoin-orange);
-    margin-bottom: 12px;
     margin-left: 20px;
 }
+
 .currency-table-container {
-    display: flex;
-    flex-direction: column;
     min-width: 235px;
     max-width: 500px;
     font-family: "Inter", sans-serif;
 }
-
+.currency-table-container .right-arrow {
+    position: relative;
+    left: 255px;
+    top: 100px;
+}
 .main-currency-table table td {
     background-color: var(--just-white);
     padding: 11px 12px 10px 12px;
     font-size: var(--medium);
 }
+
 table .table__right {
     color: #757575;
     font-weight: 400;
@@ -182,17 +188,19 @@ table .table__left {
     border-radius: 8px;
     background-color: var(--soft-orange);
     margin-top: 16px;
+    margin-bottom: 65px;
     margin-left: 10px;
     padding: 8px;
     color: var(--black);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: var(--medium);
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    width: max-content;
 }
 .commissions-table-container {
-    display: flex;
-    flex-direction: column;
     min-width: 235px;
     max-width: 500px;
     font-family: "Inter", sans-serif;
@@ -205,7 +213,6 @@ table .table__left {
 .commissions-table-container span {
     color: #1a9af7;
     margin-left: 20px;
-    margin-bottom: 0;
     font-size: 1.8rem;
     font-weight: 700;
 }
@@ -214,11 +221,22 @@ table .table__left {
     border-radius: 8px;
     background-color: var(--soft-blue);
     margin-top: 16px;
+    margin-bottom: 65px;
     margin-left: 10px;
     padding: 8px;
     color: var(--black);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: var(--medium);
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    width: max-content;
+}
+.commissions-table-container .left-arrow {
+    position: relative;
+    right: 270px;
+    top: 100px;
+    transform: rotate(180deg);
+    scroll-behavior: none;
 }
