--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ table .table__left {
     background-color: var(--black);
     min-width: 320px;
     min-height: 910px;
+    padding: 16px;
 }
 .main-product-detail .potato-icon {
     background-image: url(./assets/icons/potato.svg);
@@ -278,7 +279,7 @@ table .table__left {
     min-width: 288px;
     height: 155px;
     background-color: var(--warm-black);
-    margin: 0 auto 16px;
+    margin-bottom: 16px;
     text-align: start;
     padding: 10px 20px 22px 16px;
 }
@@ -297,10 +298,42 @@ table .table__left {
 .bitcoin-baby {
     color: var(--just-white);
     width: 100%;
-    height: 387px;
-    background-image: url(./assets/img/bitcoinbaby.jpg);
+    height: 50vh;
+    background-image: url(./assets/img/bitcoinbaby2x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    min-width: 320px;
-    min-height: 387px;
+    background-position: center;
+    min-width: 319px;
+    text-align: center;
+    padding-top: 64px;
+}
+.bitcoin-baby h2 {
+    font-size: var(--big);
+    font-weight: 700;
+}
+.main-plans-container {
+    padding: 64px 15px 64px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--off-white);
+}
+.plans-container--card {
+    background-color: var(--just-white);
+    width: 190px;
+    height: 247px;
+    padding: 31px 20px 24px 20px;
+}
+.plans-container--card .float {
+    position: relative;
+    top: -25%;
+    left: 18%;
+    background-color: var(--bitcoin-orange);
+    color: var(--just-white);
+    font-size: 12px;
+    font-weight: 700;
+    padding: 8px;
+    text-align: center;
+    width: fit-content;
+    border-radius: 8px;
 }
