--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html {
     --big: 2.4rem;
     --medium: 1.6rem;
     --little: 1.4rem;
+
 }
 .inactive {
     display: none;
@@ -61,16 +62,18 @@ header .logo {
  font-weight: 700;
  margin: 36px 0 0px 0;
  color: var(--just-white);
+ max-width: 400px;
 }
 .header--title-container p {
     font-size: var(--little);
     font-weight: 500;
     margin: 24px 16px 0px 16px;
     color: var(--soft-orange);
+    max-width: 400px;
 }
 .header--title-container a {
     position: relative;
-    top: -5%;
+    top: 0px;
     text-decoration: none;
     font-size: var(--little);
     font-weight: 700;
@@ -109,6 +112,7 @@ header .logo {
 }
 .main-exchange-container--title {
     width: 288px;
+    max-width: 400px;
     margin-left: 15px;
     margin-right: 17px;
 }
@@ -233,6 +237,7 @@ table .table__left {
     font-size: 1.4rem;
     line-height: 1.5rem;
     font-weight: 400;
+    width: max-content;
 }
 .commissions-table-container .left-arrow {
     position: relative;
@@ -247,7 +252,6 @@ table .table__left {
     flex-direction: column;
     background-color: var(--black);
     min-width: 320px;
-    min-height: 910px;
     padding: 16px;
 }
 .main-product-detail .potato-icon {
@@ -298,7 +302,7 @@ table .table__left {
     color: var(--just-white);
     width: 100%;
     height: 50vh;
-    background-image: url(./assets/img/bitcoinbaby2x.jpg);
+    background-image: url(./assets/img/bitcoinbaby.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -502,4 +506,5 @@ footer span {
     height: 55px;
     background-image: url(./assets/icons/copyright.svg);
     background-repeat: no-repeat;
+    margin-top: 11px;
 }
